crates/ui/tests/snapshots/panel_snapshots__positions_empty.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: positions_summary(&c)
---
panel: positions
title: Open positions
state: empty
copy: No open positions. Strategy is armed and watching.
