crates/ui/tests/snapshots/panel_snapshots__positions_error.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: positions_summary(&c)
---
panel: positions
title: Open positions
state: error
copy: Ledger error while reading positions: database locked
