crates/ui/tests/snapshots/panel_snapshots__positions_loading.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: positions_summary(&c)
---
panel: positions
title: Open positions
state: loading
copy: Loading positions from the ledger…
