crates/ui/tests/snapshots/panel_snapshots__positions_ready_hides_zero_qty.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: summary
---
panel: positions
title: Open positions
state: ready
rows:
  BTCUSDT qty=0.25 cost=10000.00 mark=40050.00 pnl=12.50 pnl_color=pos pct=0.13 exp=11.10
