crates/ui/tests/snapshots/panel_snapshots__status_bar_connected.snap
---
source: crates/ui/tests/panel_snapshots.rs
assertion_line: 373
expression: status_bar_summary(&c)
---
widget: status_bar
connection_dot: pos
connection: Connected · binance
latency: Latency 42 ms color=pos
account: Paper · Demo 3-symbol
Server: — UTC
cpu: CPU —
version: v0.1.0 · rust
