crates/ui/tests/snapshots/panel_snapshots__status_bar_disconnected.snap
---
source: crates/ui/tests/panel_snapshots.rs
assertion_line: 389
expression: status_bar_summary(&c)
---
widget: status_bar
connection_dot: fg_muted
connection: Disconnected
latency: Latency — color=fg_muted
account:
Server: — UTC
cpu: CPU —
version: v0.1.0 · rust
